[package]
name = "open-tfl"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.126"
serde_json = "1.0.64"
tokio = "1.7.1"

