[package]
name = "open-tfl"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = [ "sqlite_pool" ] }
rusqlite = { version = "0.25.3", features = [ "bundled" ] }
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-tokio-rustls", "sqlite", "macros", "offline", "migrate" ] }
tokio = "1.7.1"
